# Traffic-Camera-Vehicle-Counter

./: README.md
src/: CMakeLists.txt  imageprocessor.cpp  imageprocessor.h  program3.cpp  vehiclecounter.cpp  vehiclecounter.h  videofileinfo.cpp  videofileinfo.h
